# vsu-web

./: Cargo.toml  commit.txt  docker-compose.yml
crates/db/: Cargo.toml
crates/domain/: Cargo.toml
crates/dto/: Cargo.toml
crates/utils/: Cargo.toml
docs/: DOCKER.en.md  DOCKER.ru.md  README.md
services/admin_service/: Cargo.toml  Dockerfile
services/api_service/: Cargo.toml  Dockerfile
services/parser_service/: Cargo.toml  Dockerfile
services/telegram_service/: Cargo.toml  Dockerfile
