[workspace]
resolver = "2"
members = [
  "services/api_service",
  "services/telegram_service",
  "services/parser_service",
  "services/admin_service",
  "crates/domain",
  "crates/db",
  "crates/dto",
  "crates/utils",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
